# stable_audio_demo_mac

./: app.py  pyproject.toml
demo/: test_model.ipynb
