[project]
name = "stable-audio-demo-mac"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "stable-audio-demo-mac",
    "librosa>=0.10.1",
    "numba>=0.56.0",
    "stable-audio-tools>=0.0.19",
    "ipykernel>=6.29.5",
    "streamlit>=1.22.0",
    "pandas>=2.0.2",
    "numpy>=1.23.5",
]
